<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddNoteFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/edit_note_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="24sp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_note_capture_input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_capture_str"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edit_note_text_view"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_note_description_input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_description_str"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/edit_note_capture_input_edit_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_note_date_input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_date_str"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/edit_note_description_input_edit_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_note_content_input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/note_content_str"
        android:gravity="top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/edit_note_date_input_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_note_button"/>

    <Button
        android:id="@+id/edit_note_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_note_button_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_edit_note_button"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/cancel_edit_note_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_note_button_str"
        app:layout_constraintStart_toEndOf="@id/edit_note_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>